HHH-17325 - @SoftDelete with timestamp