@@ -4,9 +4,6 @@
  */
 package org.hibernate.persister.collection;
 
-import java.util.Collections;
-import java.util.List;
-
 import org.hibernate.HibernateException;
 import org.hibernate.Internal;
 import org.hibernate.MappingException;
@@ -47,7 +44,6 @@ import org.hibernate.sql.ast.tree.expression.ColumnReference;
 import org.hibernate.sql.ast.tree.from.TableGroup;
 import org.hibernate.sql.model.ast.ColumnValueBinding;
 import org.hibernate.sql.model.ast.ColumnValueParameterList;
-import org.hibernate.sql.model.ast.ColumnWriteFragment;
 import org.hibernate.sql.model.ast.MutatingTableReference;
 import org.hibernate.sql.model.ast.RestrictedTableMutation;
 import org.hibernate.sql.model.ast.TableInsert;
@@ -58,6 +54,8 @@ import org.hibernate.sql.model.ast.builder.TableUpdateBuilderStandard;
 import org.hibernate.sql.model.internal.TableUpdateStandard;
 import org.hibernate.sql.model.jdbc.JdbcMutationOperation;
 import org.hibernate.type.EntityType;
+
+import java.util.List;
 
 import static org.hibernate.internal.util.collections.CollectionHelper.arrayList;
 import static org.hibernate.sql.model.ModelMutationLogging.MODEL_MUTATION_LOGGER;
@@ -223,18 +221,10 @@ public class BasicCollectionPersister extends AbstractCollectionPersister {
 		applyKeyRestrictions( tableReference, parameterBinders, restrictionBindings );
 
 		final ColumnReference softDeleteColumn = new ColumnReference( tableReference, softDeleteMapping );
-		final ColumnWriteFragment nonDeletedLiteral = new ColumnWriteFragment(
-				softDeleteMapping.getNonDeletedLiteralText(),
-				Collections.emptyList(),
-				softDeleteMapping.getJdbcMapping()
-		);
-		final ColumnWriteFragment deletedLiteral = new ColumnWriteFragment(
-				softDeleteMapping.getDeletedLiteralText(),
-				Collections.emptyList(),
-				softDeleteMapping.getJdbcMapping()
-		);
-		restrictionBindings.add( new ColumnValueBinding( softDeleteColumn, nonDeletedLiteral ) );
-		final List<ColumnValueBinding> valueBindings = List.of( new ColumnValueBinding( softDeleteColumn, deletedLiteral ) );
+		final ColumnValueBinding nonDeletedBinding = softDeleteMapping.createNonDeletedValueBinding( softDeleteColumn );
+		final ColumnValueBinding deletedBinding = softDeleteMapping.createDeletedValueBinding( softDeleteColumn );
+		restrictionBindings.add( nonDeletedBinding );
+		final List<ColumnValueBinding> valueBindings = List.of( deletedBinding );
 
 		return new TableUpdateStandard(
 				tableReference,
@@ -671,17 +661,8 @@ public class BasicCollectionPersister extends AbstractCollectionPersister {
 			}
 		}
 
-		updateBuilder.addLiteralRestriction(
-				softDeleteMapping.getColumnName(),
-				softDeleteMapping.getNonDeletedLiteralText(),
-				softDeleteMapping.getJdbcMapping()
-		);
-
-		updateBuilder.addValueColumn(
-				softDeleteMapping.getColumnName(),
-				softDeleteMapping.getDeletedLiteralText(),
-				softDeleteMapping.getJdbcMapping()
-		);
+		softDeleteMapping.applyDeletedAssignment( updateBuilder );
+		softDeleteMapping.applyNonDeletedRestriction( updateBuilder );
 
 		return updateBuilder.buildMutation();
 	}
